--- a/Passtimes/Passtimes/Profile.storyboard
+++ b/Passtimes/Passtimes/Profile.storyboard
@@ -116,11 +116,11 @@
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="21" minY="6" maxX="21" maxY="6"/>
+                                    <inset key="sectionInset" minX="16" minY="6" maxX="16" maxY="6"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellIdentifier" id="zFh-ZY-PG8">
-                                        <rect key="frame" x="21" y="6" width="50" height="50"/>
+                                        <rect key="frame" x="16" y="6" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -165,6 +165,7 @@
                         <outlet property="overallXP" destination="db0-JA-dMM" id="x7d-Du-75g"/>
                         <outlet property="profilePhoto" destination="TiW-C1-DS9" id="fjB-WM-JYF"/>
                         <segue destination="uZo-ac-lVv" kind="show" identifier="toEditProfile" id="DeQ-ne-zhB"/>
+                        <segue destination="NAH-5c-aeq" kind="showDetail" identifier="toDetailView" id="mth-qs-bdR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HM4-vT-oaN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -307,6 +308,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OvC-xV-zqg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1146" y="171"/>
+        </scene>
+        <!--DetailEvent-->
+        <scene sceneID="z1w-U0-fgN">
+            <objects>
+                <viewControllerPlaceholder storyboardName="DetailEvent" id="NAH-5c-aeq" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RLZ-Mp-rNB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="275" y="625"/>
         </scene>
     </scenes>
     <resources>
