--- a/Passtimes/Passtimes/Leaderboard.storyboard
+++ b/Passtimes/Passtimes/Leaderboard.storyboard
@@ -69,7 +69,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bf3-Ec-tmx">
-                                <rect key="frame" x="10" y="75" width="49" height="41"/>
+                                <rect key="frame" x="10" y="75" width="45" height="41"/>
                                 <fontDescription key="fontDescription" name="Avenir-BlackOblique" family="Avenir" pointSize="30"/>
                                 <color key="textColor" red="0.1333333333" green="0.12941176469999999" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -103,7 +103,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="7gy-VB-zar" firstAttribute="leading" secondItem="bf3-Ec-tmx" secondAttribute="trailing" id="4kq-yT-LWi"/>
+                            <constraint firstItem="7gy-VB-zar" firstAttribute="leading" secondItem="bf3-Ec-tmx" secondAttribute="trailing" constant="4" id="4kq-yT-LWi"/>
                             <constraint firstItem="7gy-VB-zar" firstAttribute="top" secondItem="SXK-fl-NME" secondAttribute="bottom" constant="16" id="8Uy-XY-0Hn"/>
                             <constraint firstItem="ocI-9E-GBY" firstAttribute="leading" secondItem="QyR-4f-Ujn" secondAttribute="leading" constant="16" id="9jI-2E-S0t"/>
                             <constraint firstItem="bf3-Ec-tmx" firstAttribute="leading" secondItem="QyR-4f-Ujn" secondAttribute="leading" constant="10" id="J6t-Ii-dfP"/>
